[cpan] M::E::E: added "SEE ALSO" list
git-svn-id: svn+ssh://faui2k3.org/var/lib/svn/moritz/cpan/Math-Expression-Evaluator@635 addfbb1e-f4f9-0310-b6f0-bccd0f9b8dc6

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision History for Perl module Math::Expression::Evaluator
 
+0.0.5
+- Added "See Also" list to MEE documentation
+
 0.0.4 Wed Sep 19 17:51:01 CEST 2007
 - add variables() method
 - more documentation on optimization
