[cpan] MEE  - track .pos in Lexer  - include .pos in error messages (Parser)  - small doc fixes in Lexer
git-svn-id: svn+ssh://faui2k3.org/var/lib/svn/moritz/cpan/Math-Expression-Evaluator@643 addfbb1e-f4f9-0310-b6f0-bccd0f9b8dc6

--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@ Revision History for Perl module Math::Expression::Evaluator
 
 0.0.5
 - Added "See Also" list to MEE documentation
+- Lexer: track .pos in tokens
+- Parser: Annotate error messages with position
+- Documentation in Lexer.pm: more details on regex matching
 
 0.0.4 Wed Sep 19 17:51:01 CEST 2007
 - add variables() method
