[cpan] MEE: 0.0.6 release
git-svn-id: svn+ssh://faui2k3.org/var/lib/svn/moritz/cpan/Math-Expression-Evaluator@661 addfbb1e-f4f9-0310-b6f0-bccd0f9b8dc6

--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision History for Perl module Math::Expression::Evaluator
 
-0.0.6
+0.0.6 Thu Apr  3 09:09:37 CEST 2008
 - added modulo operator %
 - documented variable handling of compiled functions
 - more test cases for associativity, builtins and variables
