--- a/Changes
+++ b/Changes
@@ -1,5 +1,16 @@
 Revision History for Perl module Math::Expression::Evaluator
 
+0.1.1 Wed Jun 18 22:28:48 CEST 2008
+- require perl version 5.006001, not 5.6.1. Perl 5.5something doesn't
+  understand the latter.
+
+0.1.0 Sun Jun  8 12:30:06 CEST 2008
+- ast_size is now a public method
+- added two examples
+- increased submajor version number to 1 to reflect increasing maturity
+- don't hide modules from PAUSE indexer, cpants complains about missing
+  dependencies otherwie
+
 0.0.6 Thu Apr  3 09:09:37 CEST 2008
 - added modulo operator %
 - documented variable handling of compiled functions
