[cpan] Math::Expression::Evaluator: make + operate as a true binary operator (only interesting for overloaded objects)
git-svn-id: svn+ssh://faui2k3.org/var/lib/svn/moritz/cpan/Math-Expression-Evaluator@744 addfbb1e-f4f9-0310-b6f0-bccd0f9b8dc6

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision History for Perl module Math::Expression::Evaluator
 
+- made '+' in operations work in binary context, so that overloaded objects
+  without a neutral element for addtion can work.
+
 0.1.2 Mon Jul 14 11:45:23 CEST 2008
 - fixed timestamps, they are all in the past now 
 
